# zklm-compile

./: .dockerignore  .gitignore  LICENSE  PAPER.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
bench/: README.md  compare.py  run_ezkl.py
bench/results/: compare.csv  ezkl_dense4m.csv
demo/: chat.html  index.html
docker/: Dockerfile  docker-compose.yml  requirements.txt
examples/: quickstart.sh  square_circuit.json
python/: audit.py  benchmark_dense4m.py  benchmark_gpt2.py  benchmark_mnist.py  benchmark_qwen35_9b.py  serve.py
python/tests/: test_qwen35.py  test_validation.py
python/tvm_to_gkr/: __init__.py  constants.py  llama_pipeline.py  m31.py  model_extractor.py  qwen35_pipeline.py  structured_pipeline.py
rust/zk_compile_prover/: Cargo.toml  pyproject.toml  rust-toolchain.toml
rust/zk_compile_prover/python/zk_compile/: __init__.py  cli.py  prover.py
rust/zk_compile_prover/src/: constraint_system.rs  main.rs
rust/zk_ml_prover/: Cargo.toml  README.md  build.rs  build_all.sh  rust-toolchain.toml
rust/zk_ml_prover/.cargo/: config.toml
rust/zk_ml_prover/src/: lib.rs  main.rs  protocol.rs  server.rs  verification.rs
rust/zk_ml_prover/src/field/: common.rs  m31_ops.rs  mod.rs
rust/zk_ml_prover/src/gpu/: metal_buffer.rs  metal_device.rs  metal_kernels.rs  mod.rs
rust/zk_ml_prover/src/gpu/shaders/: m31.metal
rust/zk_ml_prover/src/pipeline/: forward.rs  mod.rs  prove.rs
rust/zk_ml_prover/src/proving/: attention.rs  basefold.rs  elementwise.rs  gdn_recurrence.rs  gelu.rs  layernorm.rs  lookup.rs  matmul.rs  mod.rs  pcs.rs  rmsnorm.rs  sigmoid.rs  sigmoid_gate.rs  silu.rs  softmax.rs  sumcheck.rs  swiglu.rs  weight_commitment.rs
rust/zk_ml_prover/src/transformer/: gpt2.rs  llama.rs  mod.rs  qwen.rs
rust/zk_ml_prover/tests/property/: harness.proptest-regressions  harness.rs  harness_gdn_recurrence.rs  mle_relations.rs  quantization_invariants.rs
rust/zk_ml_prover/tests/tamper_matrix/: main.rs
tests/reference/: SPEC.md  attention.py  gdn_recurrence.py  m31.py  mle.py  reference.py  run.py  transformer.py
