[package]
name = "zk_compile_prover"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.5"
ark-relations = "0.5"
ark-bn254 = "0.5"
ark-groth16 = "0.5"
ark-snark = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = { version = "0.8", features = ["getrandom"] }
num-bigint = "0.4.6"

[profile.release]
opt-level = 3
