[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zk-compile"
version = "0.1.0"
description = "ZK proof compiler for ML models -- prove inference correctness with zero-knowledge proofs"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.9"
authors = [{name = "mitiskuma"}]
keywords = ["zero-knowledge", "zk", "machine-learning", "proof", "compiler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = ["numpy>=1.20"]

[project.scripts]
zk-compile = "zk_compile.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["python"]
