[package]
name = "zk_ml_prover"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fast verifiable inference for large language models via structured sumcheck and Basefold PCS over Mersenne-31"
repository = "https://github.com/niclas-4/zk-ml-prover"
authors = ["mitiskuma"]

[features]
default = []
metal_gpu = ["dep:metal"]
pcs = []
pcs-full = ["pcs"]

[dependencies]
p3-mersenne-31 = "0.2"
p3-field = "0.2"
p3-fri = "0.2"
p3-symmetric = "0.2"
p3-commit = "0.2"
p3-matrix = "0.2"
p3-challenger = "0.2"
p3-util = "0.2"
p3-circle = "0.2"
p3-merkle-tree = "0.2"
p3-keccak = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
sha2 = "0.10"
blake3 = "1"
rand = "0.8"
hex = "0.4"
itertools = "0.12"
rayon = "1.10"
metal = { version = "0.33", optional = true }

[profile.release]
opt-level = 3
